fixed pager alignment and added 45 px margin to bottom of advice views

--- a/public/ng/app/scss/modules/_helpers.scss
+++ b/public/ng/app/scss/modules/_helpers.scss
@@ -32,6 +32,7 @@
 .content-background-no-objects {
   background-image: url('../images/background/survey-no-objects.png');
   background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 
