--- a/public/ng/app/scss/partials/_advice.scss
+++ b/public/ng/app/scss/partials/_advice.scss
@@ -168,7 +168,8 @@
     }
 
     &.slideshow {
-      min-height: 480px;
+      // min-height: 480px;
+      min-height: 560px;
     }
 
     &.nested {
@@ -242,6 +243,7 @@
     }
 
     .description {
+      padding-bottom: 45px;
       p {
         font-size: 16px;
         padding-left: 20px;
@@ -263,7 +265,7 @@
 
 
 .modal .container .slide {
-  height: 350px;
+  // height: 350px;
 
   .header {
     height:    50px;
@@ -282,10 +284,14 @@
     height: 100%;
 
     .slider-slide {
-      height:           420px;
+      // height:           420px;
       background-color: white;
       box-shadow:       0px 0px 15px -9px rgba(0, 0, 0, 0.8), 0px 0px 15px -4px rgba(0, 0, 0, 0.8);
       text-align:       left;
+
+      .content-wrapper {
+        margin-bottom: 45px;
+      }
 
       &.center-images {
         text-align: center;
